# email-analysis

./: .gitignore  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS.md  README.md  pyproject.toml
app/: __init__.py  config.py  input_validator.py  main.py  requirement.txt  utils.py
app/services/: __init__.py  ai_analysis.py  attachment_analysis.py  auth_analysis.py  cache.py  ip_analysis.py  llm_analysis.py  parser.py  threat_scoring.py  url_analysis.py
app/static/: style.css
app/templates/: index.html  result.html
sample/: test.eml
tests/: quick_test_ai.py  test_ai.py  test_llama_ai.py  test_rule_based.py  test_services.py
